# GitLit-CLI

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  lib.rs
