[package]
name = "GitLit-CLI"
version = "0.1.0"
authors = ["adam-cakrda <cakrda@outlook.cz>"]
license = "MIT"
repository = "https://gitlit.rostiapp.cz/adam-cakrda/GitLit-CLI"
description = "A simple cli and library for GitLit API"
keywords = ["gitlit", "api", "wrapper"]
readme = "README.md"
homepage = "https://gitlit.rostiapp.cz/adam-cakrda/GitLit-CLI"
edition = "2024"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
directories = "5.0.1"